added new ROUTES

--- a/main_app/templates/main_app/base_index.html
+++ b/main_app/templates/main_app/base_index.html
@@ -58,16 +58,6 @@
  </div>
 </nav>
    
-    <div class="jumbotron jumbotron-fluid" style="background:DarkTurquoise;">
-      <div class="container">
-        <h1 class="display-2">BLOG on BLOCKS!</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-      </div>
-    </div>
-    <div class="container">
-      
-</div>
-
 <div class="row">
         <div class="col-md-8">
           {% if messages %}
@@ -84,7 +74,7 @@
       </div>
     </main> 
 <!-- Footer -->
-<footer class="page-footer font-small teal pt-4" style="background:DarkTurquoise;">
+<footer class="page-footer font-small teal pt-4" style="background:DarkTurquoise; margin-top: 1000px">
 
   <!-- Footer Text -->
   <div class="container-fluid text-center text-md-left">
