--- a/main_app/templates/main_app/students.html
+++ b/main_app/templates/main_app/students.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+   <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Student Management</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,7 +25,53 @@
   <link rel="stylesheet" type="text/css" href="{% static 'main_app/css/main.css'%}">
 <!--===============================================================================================-->
 </head>
-<body>
+<body >
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-inverse" style="background-color: #00CED1; font-size: 20px">
+          <div class="container-fluid">
+          <a class="navbar-brand" href="#" style=" font-size: 30px">BoB </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+            <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <div class="row">
+      <div class="form-inline my-2 my-lg-0">
+      <label>PUBLIC KEY: </label>{{address}}</label>
+      </div>
+    </div>
+  <!--   <div class="row">
+      <div class="form-inline my-2 my-lg-0">
+      {{balance}}
+      </div>
+    </div> -->
+    </div>
+    <br>
+    
+    
+ </div>
+</nav>
 <div>
   <div class="limiter">
     <div class="container-table100">
@@ -36,7 +85,7 @@
                 <th class="column100 column4" data-column="column4">BATCH ID</th>
                 <th class="column100 column5" data-column="column5">STREAM</th>
                 <th class="column100 column6" data-column="column6">ATTENDANCE</th>
-                <th class="column100 column7" data-column="column7">TIME</th>
+                <th class="column100 column7" data-column="column7">TIME OF UPLOAD</th>
                 <th class="column100 column8" data-column="column8">UPLOADED BY</th>
               </tr>
             </thead>
