added new ROUTES

--- a/main_app/templates/main_app/base_index.html
+++ b/main_app/templates/main_app/base_index.html
@@ -84,7 +84,7 @@
       </div>
     </main> 
 <!-- Footer -->
-<footer class="page-footer font-small teal pt-4" style="background:DarkTurquoise;">
+<footer class="page-footer font-small teal pt-4" style="background:DarkTurquoise; margin-top: 1000px">
 
   <!-- Footer Text -->
   <div class="container-fluid text-center text-md-left">
