added Metamask Extension to the dapp

--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -57,41 +57,6 @@
     
  </div>
 </nav>
-   
-    <div class="jumbotron jumbotron-fluid" style="background:DarkTurquoise;">
-      <div class="container">
-        <h1 class="display-2">BLOG on BLOCKS!</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row d-flex justify-content-between">
-        <div class="col-md-6 col-lg-4"> 
-          <div class="card">
-            <img class="card-img-top" src="#" alt="Card image cap">
-            <div class="card-body">
-              <h3 class="card-title">Card title</h3>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">READ POSTS</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4"> 
-          <div class="card">
-            <img class="card-img-top" src="#" alt="Card image cap">
-            <div class="card-body">
-              <h3 class="card-title">Card title</h3>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">LOGIN</a>
-            </div>
-          </div>
-        </div>
-      
-      </div>
-    </div>
-</div>
-
 <div class="row">
         <div class="col-md-8">
           {% if messages %}
@@ -101,6 +66,31 @@
               </div>
             {% endfor %}
           {% endif %}
+
+
+          {% block scripts %}
+            <script >
+              
+              window.addEventListener('load', ()=>{
+
+                if(typeof(web3)==='undefined')
+                {
+                  console.log('NO WEB3')
+                }
+                else{
+                  console.log('FOUND WEB3')
+                }
+                web3= new Web3(window.web3.currentProvider);
+                ethereum.enable();
+              });
+
+              
+            </script>
+
+          {% endblock scripts %}
+
+
+
           {% block content %}{% endblock %}
         </div>
        
@@ -108,7 +98,7 @@
       </div>
     </main> 
 <!-- Footer -->
-<footer class="page-footer font-small teal pt-4" style="background:DarkTurquoise;">
+<footer class="page-footer font-small teal pt-4" style="background:DarkTurquoise; margin-top: 1000px">
 
   <!-- Footer Text -->
   <div class="container-fluid text-center text-md-left">
