--- a/main_app/templates/main_app/base_index.html
+++ b/main_app/templates/main_app/base_index.html
@@ -77,6 +77,8 @@
               </div>
             {% endfor %}
           {% endif %}
+          {% block scripts %}{% endblock scripts %}
+
           {% block content %}{% endblock %}
         </div>
        
