--- a/main_app/templates/main_app/forms.html
+++ b/main_app/templates/main_app/forms.html
@@ -1,5 +1,44 @@
 {% extends 'main_app/base_index.html' %}
 
+{% block scripts %}
+<script >
+  web3.eth.getAccounts(function get(err, res){            
+                  account=res[0]
+                  console.log(account)
+                });
+
+</script>
+  
+{% endblock scripts %}
+
 {% block content %}
-<h1>HELLO</h1>
+<div class="container">
+
+  <div class="form-row">
+    <div class="form-group col-md-6" style="margin-top: 20px;">
+      <label for="inputEmail4">Student's Name</label>
+      <input id="title" name="title" class="form-control" placeholder="ADD A CATCHY TITLE HERE">
+    </div>
+  </div>
+  <div class="form-group" style="margin-top: 20px;">
+    <label for="inputAddress">Student ID</label>
+    <textarea id="subtitle" name="subtitle" type="text" class="form-control" id="inputAddress2" placeholder="ADD A SUITABLE SUBITILE" rows="2"></textarea> 
+  </div>
+  <div class="form-group" style="margin-top: 20px;">
+    <label for="inputAddress2">Batch</label>
+    <textarea id="content" name="content" type="text" class="form-control" id="inputAddress2" placeholder="START WRITING YOUR BLOG" rows="2" cols="1"></textarea> 
+  </div>
+  <div class="form-group" style="margin-top: 20px;">
+    <label for="inputAddress">Stream Student</label>
+    <textarea id="subtitle" name="subtitle" type="text" class="form-control" id="inputAddress2" placeholder="ADD A SUITABLE SUBITILE" rows="2"></textarea> 
+  </div>
+  
+  <div class="form-group" style="margin-top: 20px; text-align: center;">
+     <label>SELL THIS BLOG</label><input id="for_sale" name="for_sale" type="checkbox" checked data-toggle="toggle" data-on="YES" data-off="NO" data-size="md">
+  </div>
+  </div>   
+</div>
+ 
+
+
 {% endblock %}
