--- a/main_app/templates/main_app/base_index.html
+++ b/main_app/templates/main_app/base_index.html
@@ -57,16 +57,8 @@
     
  </div>
 </nav>
-   
-    <div class="jumbotron jumbotron-fluid" style="background:DarkTurquoise;">
-      <div class="container">
-        <h1 class="display-2">BLOG on BLOCKS!</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-      </div>
-    </div>
-    <div class="container">
       
-</div>
+<!-- </div> -->
 
 <div class="row">
         <div class="col-md-8">
@@ -77,7 +69,11 @@
               </div>
             {% endfor %}
           {% endif %}
-          {% block scripts %}{% endblock scripts %}
+          {% block scripts %}
+            <script>
+              
+            </script>
+          {% endblock scripts %}
 
           {% block content %}{% endblock %}
         </div>
