--- a/main_app/templates/main_app/students.html
+++ b/main_app/templates/main_app/students.html
@@ -24,11 +24,13 @@
 </head>
 <body>
 <div>
+
   <div class="limiter">
     <div class="container-table100">
       <div class="wrap-table100">
         <div class="table100 ver2 m-b-110">
           <table data-vertable="ver2">
+             <h1 style="text-align: center; margin-bottom: 30px">STUDENT'S IMMUTABLE RECORDS</h1>
             <thead>
               <tr class="row100 head">
                 <th class="column100 column1" data-column="column1">Name</th>
