marks adding feature added

--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -341,7 +341,21 @@
       </div>
     </div>
 
-
+    <div class="container">
+     <div class="row d-flex justify-content-between" style="margin-top: 50px">
+        <div class="col-md-6 col-lg-4"> 
+          <div class="card">
+            <img class="card-img-top" src="#" alt="Card image cap">
+            <div class="card-body">
+              <h3 class="card-title">ADD ATTENDANCE AND MARKS</h3>
+              <p class="card-text">Get access to some of the best contents all over the Internet.</p>
+              <a href="{% url 'modify' %}" class="btn btn-primary">ADD NOW</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
       
       </div>
     </div>
