--- a/main_app/templates/main_app/modify.html
+++ b/main_app/templates/main_app/modify.html
@@ -11,7 +11,11 @@
   <div class="card-body">
     <h5 class="card-title">{{data.1}}</h5>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="{% url 'addAttendance' data.0%}" class="btn btn-primary">Add Attendance</a>
+    <div class="d-flex justify-content-around">
+      <a href="{% url 'addAttendance' data.0%}" class="btn btn-primary">Add Attendance</a>
+      <a href="{% url 'addAttendance' data.0%}" class="btn btn-primary">Add Marks</a>
+    </div>
+    
   </div>
   <div class="card-footer text-muted">
     2 days ago
