--- a/main_app/templates/main_app/viewMarks.html
+++ b/main_app/templates/main_app/viewMarks.html
@@ -32,41 +32,31 @@
     <div class="container-table100">
       <div class="wrap-table100">
         <div class="table100 ver2 m-b-110">
-          <table data-vertable="ver2">
+          <table d-vertable="ver2">
              <h1 style="text-align: center; margin-bottom: 30px">STUDENT'S IMMUTABLE RECORDS</h1>
             <thead>
               <tr class="row100 head">
-                <th class="column100 column1" data-column="column1">Name</th>
-                <th class="column100 column2" data-column="column2">Student ID</th>
-                <th class="column100 column4" data-column="column4">BATCH ID</th>
-                <th class="column100 column5" data-column="column5">STREAM</th>
-                <th class="column100 column6" data-column="column6">ATTENDANCE</th>
-                <th class="column100 column7" data-column="column7">TIME</th>
-                <th class="column100 column7" data-column="column7">MARKS OBTAINED</th>
-                <th class="column100 column8" data-column="column8">UPLOADED BY</th>
+                <th class="column100 column1" d-column="column1">Name</th>
+                <th class="column100 column2" d-column="column2">Student ID</th>
+                <th class="column100 column4" d-column="column4">SCORE IN COMPUTER SCIENCE</th>
+                <th class="column100 column5" d-column="column5">SCORE IN COMPUTER SCIENCE</th>
+                <th class="column100 column6" d-column="column6">SCORE IN COMPUTER SCIENCE</th>
+                <th class="column100 column6" d-column="column6">SCORE IN COMPUTER SCIENCE</th>
+
               </tr>
             </thead>
-           {% for data in students %}
-<!--               <h1>{{data.0}}</h1>
- -->
+           {% for d in data %}
             <tbody>
             <div class="container col-md-6 col-lg-12">
               <tr class="row100">
-                <td class="column100 column1" data-column="column1">{{data.1}}</td>
-                <td class="column100 column2" data-column="column2">{{data.2}}</td>
-                <td class="column100 column3" data-column="column3">{{data.3}}</td>
-                <td class="column100 column4" data-column="column4">{{data.4}}</td>
-                <td class="column100 column5" data-column="column5">{{data.7}}</td>
-                <td class="column100 column6" data-column="column6">{{data.5}}</td>
-                 <td class="column100 column6" data-column="column6"><a href="#" class="btn btn-primary">View Marks</a></td>
-               
-                <td class="column100 column7" data-column="column7">{{data.6}}</td>
-              </tr>
-
-              
-            </div>
-              
-            
+                <td class="column100 column1" d-column="column1">{{d.0.1}}</td>
+                <td class="column100 column2" d-column="column2">{{d.0.2}}</td>
+                <td class="column100 column3" d-column="column3">{{d.1.0}}</td>
+                <td class="column100 column4" d-column="column4">{{d.1.1}}</td>
+                <td class="column100 column5" d-column="column5">{{d.1.2}}</td>
+                <td class="column100 column5" d-column="column5">{{d.1.3}}</td>
+             </tr>
+            </div>     
             </tbody>
         {% endfor %} 
           </table>
