added marks viewing feature

--- a/main_app/templates/main_app/students.html
+++ b/main_app/templates/main_app/students.html
@@ -58,7 +58,7 @@
                 <td class="column100 column4" data-column="column4">{{data.4}}</td>
                 <td class="column100 column5" data-column="column5">{{data.7}}</td>
                 <td class="column100 column6" data-column="column6">{{data.5}}</td>
-                 <td class="column100 column6" data-column="column6"><a href="#" class="btn btn-primary">View Marks</a></td>
+                 <td class="column100 column6" data-column="column6"><a href="{% url 'viewMarks' %}" class="btn btn-primary">View Marks</a></td>
                
                 <td class="column100 column7" data-column="column7">{{data.6}}</td>
               </tr>
