--- a/main_app/templates/main_app/modify.html
+++ b/main_app/templates/main_app/modify.html
@@ -13,7 +13,7 @@
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <div class="d-flex justify-content-around">
       <a href="{% url 'addAttendance' data.0%}" class="btn btn-primary">Add Attendance</a>
-      <a href="{% url 'addAttendance' data.0%}" class="btn btn-primary">Add Marks</a>
+      <a href="{% url 'addMarks' data.0%}" class="btn btn-primary">Add Marks</a>
     </div>
     
   </div>
