converted time to human Readable

--- a/main_app/templates/main_app/students.html
+++ b/main_app/templates/main_app/students.html
@@ -26,6 +26,52 @@
 <!--===============================================================================================-->
 </head>
 <body>
+   <nav class="navbar navbar-expand-lg navbar-dark navbar-inverse" style="background-color: #00CED1; font-size: 20px">
+          <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'base' %}" style=" font-size: 30px">Student Managment System </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+            <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <div class="row">
+      <div class="form-inline my-2 my-lg-0">
+      <label>PUBLIC KEY: </label>{{address}}</label>
+      </div>
+    </div>
+  <!--   <div class="row">
+      <div class="form-inline my-2 my-lg-0">
+      {{balance}}
+      </div>
+    </div> -->
+    </div>
+    <br>
+    
+    
+ </div>
+</nav>
 <div>
 
   <div class="limiter">
@@ -57,7 +103,7 @@
                 <td class="column100 column3" data-column="column3">{{data.3}}</td>
                 <td class="column100 column4" data-column="column4">{{data.4}}</td>
                 <td class="column100 column5" data-column="column5">{{data.7}}</td>
-                <td class="column100 column6" data-column="column6">{{data.5}}</td>
+                <td id="time"class="column100 column6" data-column="column6">{{data.5}}</td>
                  <td class="column100 column6" data-column="column6"><a href="{% url 'viewMarks' %}" class="btn btn-primary">View Marks</a></td>
                
                 <td class="column100 column7" data-column="column7">{{data.6}}</td>
@@ -81,14 +127,7 @@
   
 
 <!--===============================================================================================-->  
-  <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-  <script src="vendor/bootstrap/js/popper.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-  <script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-  <script src="js/main.js"></script>
+
 
 </body>
 </html>
