--- a/main_app/templates/main_app/forms.html
+++ b/main_app/templates/main_app/forms.html
@@ -300,20 +300,20 @@ web3.eth.getAccounts(function get(err, res){
   <div class="form-row">
     <div class="form-group col-md-6" style="margin-top: 20px;">
       <label for="inputEmail4">Student's Name</label>
-      <input id="title" name="name" class="form-control" placeholder="ADD A CATCHY TITLE HERE">
+      <input id="title" name="name" class="form-control" placeholder="Enter Student's Name">
     </div>
   </div>
   <div class="form-group" style="margin-top: 20px;">
     <label for="inputAddress">Student ID</label>
-    <textarea id="subtitle" name="id" type="text" class="form-control" id="inputAddress2" placeholder="ADD A SUITABLE SUBITILE" rows="2"></textarea> 
+    <textarea id="subtitle" name="id" type="text" class="form-control" id="inputAddress2" placeholder="Enter Student's Unique ID" rows="2"></textarea> 
   </div>
   <div class="form-group" style="margin-top: 20px;">
     <label for="inputAddress2">Batch</label>
-    <textarea id="content" name="batch" type="text" class="form-control" id="inputAddress2" placeholder="START WRITING YOUR BLOG" rows="2" cols="1"></textarea> 
+    <textarea id="content" name="batch" type="text" class="form-control" id="inputAddress2" placeholder="Enter Student's Batch ID" rows="2" cols="1"></textarea> 
   </div>
   <div class="form-group" style="margin-top: 20px;">
     <label for="inputAddress">Stream Student</label>
-    <textarea id="stream" name="stream" type="text" class="form-control" id="inputAddress2" placeholder="ADD A SUITABLE SUBITILE" rows="2"></textarea> 
+    <textarea id="stream" name="stream" type="text" class="form-control" id="inputAddress2" placeholder="Mention the Stream of the Student" rows="2"></textarea> 
   </div>
   
  <div class="row col-lg-4 col-md-4 d-flex justify-content-center" style="margin-bottom: 50px; style=margin-top: 50px; ">
