--- a/main_app/templates/main_app/viewMarks.html
+++ b/main_app/templates/main_app/viewMarks.html
@@ -26,7 +26,42 @@
 <!--===============================================================================================-->
 </head>
 <body>
+   <nav class="navbar navbar-expand-lg navbar-dark navbar-inverse" style="background-color: #7FFF00; font-size: 20px">
+          <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'base' %}" style=" font-size: 30px">Student Managment System </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url 'base' %}">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url 'students' %}">Check Student Records<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item dropdown">
+                <a style="font-weight: bold;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" >
+                  More
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="{% url 'addStudent' %}">Add A New Student</a>
+                  <a class="dropdown-item" href="{% url 'viewMarks' %}">Check Student Scores</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'modify' %}">Update Student's Records</a>
+                </div>
+              </li>
+            <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    
+    
+ </div>
+</nav>
 <div>
+
 
   <div class="limiter">
     <div class="container-table100">
